# restaurant-pos

./: README.es.md  README.md  index.html  package.json  test.csv  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  migrations.rs
src-tauri/src/migrations/: 001_create_products.sql  002_create_sales.sql  003_create_sale_items.sql  004_create_users.sql
src/app/: App.css  App.tsx  Router.tsx  main.tsx
src/components/: Header.tsx
src/components/ui/: button-group.tsx  button-group.variants.ts  button.tsx  button.variants.ts  calendar.tsx  checkbox.tsx  combobox.tsx  dropdown-menu.tsx  pagination.tsx  table.tsx
src/constants/: config.ts
src/database/: db.ts  index.ts
src/features/products/components/: ProductDialog.tsx  ProductImportDialog.tsx  ProductsOptions.tsx  ProductsPage.tsx  ProductsTable.tsx
src/features/products/hooks/: useProducts.ts
src/features/products/repository/: products.repository.ts
src/features/products/service/: products.service.ts
src/features/products/types/: products.types.ts
src/features/registry/components/: RegistryOptions.tsx  RegistryPage.tsx
src/features/registry/hooks/: useRegistryActions.ts  useRegistryFocus.ts  useSubmitRegistry.ts
src/features/sales/components/: SaleDilog.tsx  SalesFilter.tsx  SalesPage.tsx  SalesTable.tsx
src/features/sales/hooks/: useSales.ts
src/features/users/: userSchema.ts
src/lib/: date.ts
src/pages/login/: Admin.tsx  Login.tsx  SignUp.tsx  Signin.tsx  Token.tsx
src/types/: react-table.d.ts
(+16 files in other folders)
