[package]
name = "App"
version = "1.1.0"
description = "An APP for a restaurant type POS"
authors = ["fuis18"]
license = "MIT"
repository = "https://github.com/fuis18/restaurant-pos"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
